objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AE_Email__c</fullName>
        <inlineHelpText>AE&apos;s Email address. Used only in Med Affairs tasks to ensure the AE receives an email when the task is created.</inlineHelpText>
        <label>AE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Accession_Number__c</fullName>
        <description>Plain text field used to capture tasks associated to Guardant Samples.</description>
        <label>Accession Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <formula>IF( BEGINS( Subject , &apos;Email&apos;), &apos;Email&apos;, Subject)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_is_Due__c</fullName>
        <description>Needed to add this formula to get process to work</description>
        <formula>DATEVALUE(DATETIMEVALUE(ActivityDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity is Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Before_First_Account_Sample__c</fullName>
        <formula>ActivityDate &lt; Account.First_Sample_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Before First Account Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTA_Contact_Attempted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ENT-3915</description>
        <label>CTA Contact Attempted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Selling (Target MD)</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Selling (Non-Target MD)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_managed_without_followup__c</fullName>
        <description>For Project Hermes</description>
        <label>Was call managed w/o follow-up?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Was_this_a_direct_call_transfer__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancer_Class__c</fullName>
        <description>Hidden field for Webmerge</description>
        <label>Cancer Class</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinician_expresses__c</fullName>
        <label>Clinician expresses:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gratitude</fullName>
                </value>
                <value>
                    <fullName>Frustration</fullName>
                </value>
                <value>
                    <fullName>Need for CS Support</fullName>
                </value>
                <value>
                    <fullName>Tx info- plans on G360 driven tx</fullName>
                    <label>Tx info - plans on G360 driven tx</label>
                </value>
                <value>
                    <fullName>Tx info- plans on non-G360 driven tx</fullName>
                    <label>Tx info - plans on non-G360 driven tx</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Confusion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_Type_Details_Other__c</fullName>
        <inlineHelpText>If creating a task for Med Affairs, use this field to note the associated record (account or contact.) This allows Med Affairs to cross-reference without the risk of PHI being exposed.</inlineHelpText>
        <label>Record for Med Affairs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Type__c</fullName>
        <label>Communication Type Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New custom email</fullName>
                </value>
                <value>
                    <fullName>Physician replied to custom email</fullName>
                </value>
                <value>
                    <fullName>Physician replied to automated email</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>New personal email</fullName>
                    <isActive>false</isActive>
                    <label>New personal email</label>
                </value>
                <value>
                    <fullName>Physician replying to automated email</fullName>
                    <isActive>false</isActive>
                    <label>Physician replying to automated email</label>
                </value>
                <value>
                    <fullName>Physician replying to personal email</fullName>
                    <isActive>false</isActive>
                    <label>Physician replying to personal email</label>
                </value>
                <value>
                    <fullName>Replying to physician&apos;s email</fullName>
                    <isActive>false</isActive>
                    <label>Replying to physician&apos;s email</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concierge_activity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field formerly was labeled &quot;Concierge F/U Activity?&apos; Changed 7/18/18 -AB</description>
        <label>Provider Replied to 1st Result Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                    <isActive>false</isActive>
                    <label>Call</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_a_follow_up_task_for_Med_Affairs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to create a follow-up task for Medical Affairs. PLEASE EXPLAIN YOUR REQUEST IN THE COMMENTS FIELD.</inlineHelpText>
        <label>Create a follow-up task for Med Affairs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Signature__c</fullName>
        <label>Custom Signature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generic Signature</fullName>
                    <default>true</default>
                    <label>Generic Signature</label>
                </value>
                <value>
                    <fullName>Tim Schmidt, MD, PhD</fullName>
                </value>
                <value>
                    <fullName>Jason Zhu, MD</fullName>
                </value>
                <value>
                    <fullName>Maya Kotas, MD, PhD</fullName>
                </value>
                <value>
                    <fullName>Shawn Becker, MD</fullName>
                </value>
                <value>
                    <fullName>Rick Lanman, MD</fullName>
                </value>
                <value>
                    <fullName>Sam Sun, MD</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Enrolled__c</fullName>
        <label>Date Enrolled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Ineligible__c</fullName>
        <label>Date Ineligible</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Referred__c</fullName>
        <label>Date Referred</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Failed_Screening__c</fullName>
        <label>Date of Failed Screening</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Details_of_Provider_Interaction__c</fullName>
        <label>Details of Provider Interaction</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requests assistance finding a lab for confirmatory testing</fullName>
                </value>
                <value>
                    <fullName>Requests assistance finding a GC</fullName>
                </value>
                <value>
                    <fullName>Asks for assistance explaining result to patient</fullName>
                </value>
                <value>
                    <fullName>Questions need to confirm finding</fullName>
                </value>
                <value>
                    <fullName>Asks about somatic vs germline differentiation</fullName>
                </value>
                <value>
                    <fullName>Requests assistance with interpretation beyond secondary finding</fullName>
                </value>
                <value>
                    <fullName>Questions need for future germline testing as secondary findings are now being reported</fullName>
                </value>
                <value>
                    <fullName>Asks which other genes are included in germline reporting</fullName>
                </value>
                <value>
                    <fullName>Other (please describe in Comments field)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_TRF_Influence_Outreach__c</fullName>
        <label>Did Data Review Influence Outreach?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes-no outreach made</fullName>
                </value>
                <value>
                    <fullName>Yes-custom email/contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_provider_reply_respond__c</fullName>
        <label>Did provider reply/respond?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Status_Notes__c</fullName>
        <label>Enrollment Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enrollment_Status__c</fullName>
        <label>Referral Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Guardant Outreach</fullName>
                </value>
                <value>
                    <fullName>Pharma Outreach</fullName>
                    <label>Pharma/Site Outreach</label>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                    <label>Enrolled/Prescribed</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Contact Attempted</fullName>
                    <isActive>false</isActive>
                    <label>Contact Attempted</label>
                </value>
                <value>
                    <fullName>Future Consideration</fullName>
                    <isActive>false</isActive>
                    <label>Future Consideration</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <isActive>false</isActive>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Pharma Permission to Connect</fullName>
                    <isActive>false</isActive>
                    <label>Pharma Permission to Connect</label>
                </value>
                <value>
                    <fullName>Referred</fullName>
                    <isActive>false</isActive>
                    <label>Referred</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Sub_Status__c</fullName>
        <label>Referral Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Enrollment_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Pharma</fullName>
                </value>
                <value>
                    <fullName>Accepted by Pharma</fullName>
                </value>
                <value>
                    <fullName>Emailed</fullName>
                </value>
                <value>
                    <fullName>Ready For Outreach</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Future Consideration</fullName>
                </value>
                <value>
                    <fullName>Via Match Program</fullName>
                </value>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
                <value>
                    <fullName>Patient Lost to Follow Up</fullName>
                </value>
                <value>
                    <fullName>Provider Refusal</fullName>
                </value>
                <value>
                    <fullName>Patient Refusal</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Trial Change</fullName>
                </value>
                <value>
                    <fullName>Rejected by Pharma</fullName>
                </value>
                <value>
                    <fullName>Newer Test Results Available</fullName>
                </value>
                <value>
                    <fullName>Exhausted Follow-Up</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Contact Attempted</fullName>
                    <isActive>false</isActive>
                    <label>Contact Attempted</label>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                    <isActive>false</isActive>
                    <label>Enrolled</label>
                </value>
                <value>
                    <fullName>Failed Screening</fullName>
                    <isActive>false</isActive>
                    <label>Failed Screening</label>
                </value>
                <value>
                    <fullName>Information Sent</fullName>
                    <isActive>false</isActive>
                    <label>Information Sent</label>
                </value>
                <value>
                    <fullName>On Treatment</fullName>
                    <isActive>false</isActive>
                    <label>On Treatment</label>
                </value>
                <value>
                    <fullName>Pharma in Contact</fullName>
                    <isActive>false</isActive>
                    <label>Pharma in Contact</label>
                </value>
                <value>
                    <fullName>Referral Letter Sent</fullName>
                    <isActive>false</isActive>
                    <label>Referral Letter Sent</label>
                </value>
                <value>
                    <fullName>Trial</fullName>
                    <isActive>false</isActive>
                    <label>Trial</label>
                </value>
                <value>
                    <fullName>With Potential</fullName>
                    <isActive>false</isActive>
                    <label>With Potential</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Guardant_Notes__c</fullName>
        <inlineHelpText>(max 255 characters), text will be displayed to pharma partners</inlineHelpText>
        <label>External Guardant Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Details__c</fullName>
        <label>Follow-Up Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Reminder__c</fullName>
        <label>Follow-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GH_Challenge_1st_Time_Tester__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NS:09/18/18 This checkbox is used to keep track of Promotion code(ie CH1)</description>
        <label>GH Challenge 1st Time Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GH_Challenge_Stale_Tester__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NS:09/18/18 This checkbox is used to keep track of Promotion code(ie CH1)</description>
        <label>GH Challenge Stale Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gene_nomenclature_ERRB2_HER2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gene nomenclature (ERRB2=HER2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Germline_mutation_previously_known__c</fullName>
        <label>Germline mutation previously known?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Germline_vs_Somatic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Germline vs Somatic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISR_Call_Result__c</fullName>
        <description>Used only on ISR Tasks</description>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Left Voicemail</fullName>
                </value>
                <value>
                    <fullName>Spoke to Office Admin</fullName>
                </value>
                <value>
                    <fullName>Spoke to Nursing Staff</fullName>
                </value>
                <value>
                    <fullName>Spoke to Prescriber (MD/DO, NP/PA)</fullName>
                </value>
                <value>
                    <fullName>Spoke to Nurse</fullName>
                    <isActive>false</isActive>
                    <label>Spoke to Nurse</label>
                </value>
                <value>
                    <fullName>Spoke to Oncologist</fullName>
                    <isActive>false</isActive>
                    <label>Spoke to Oncologist</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ideal_timing_of_testing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ideal timing of testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Notes_GH_Use_Only__c</fullName>
        <inlineHelpText>(max 255 characters), text will be displayed on the match record</inlineHelpText>
        <label>Internal Notes (GH Use Only)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_there_enough_MAF_to_treat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is there enough MAF to treat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Ditch_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ENT-3922</description>
        <label>Last Ditch Email Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MA_Task_Completed_By__c</fullName>
        <label>MA Task Completed By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>No Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MD_Email__c</fullName>
        <description>Passed through from Ordering Physician&apos;s contact record</description>
        <inlineHelpText>Don&apos;t generate email if this field is blank!</inlineHelpText>
        <label>MD Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_Granted_Permission_to_Connect__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked, the Connected Trial Site field must be filled before the outreach activity can be saved</inlineHelpText>
        <label>MD Granted Permission to Connect?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MD_Replied_to_Slate_Tester_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NS:09/06/18 This is recent change to match the Stale tester report.</description>
        <label>MD Replied to Stale Tester contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSI_H_Status_Already_Known__c</fullName>
        <label>MSI-H Status Already Known?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSL__c</fullName>
        <inlineHelpText>MSL for the account (if any)</inlineHelpText>
        <label>MSL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_A_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this field only on Mobile Layouts</description>
        <inlineHelpText>Check this box to create a follow-up task for Medical Affairs. PLEASE EXPLAIN YOUR REQUEST IN THE COMMENTS FIELD.</inlineHelpText>
        <label>M/A Follow Up?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_Priority__c</fullName>
        <label>Match Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MedAffairs_Comments__c</fullName>
        <inlineHelpText>Enter your notes for the Med Affairs Task</inlineHelpText>
        <label>Med Affairs Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medaffairs_task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden checkbox used to track all tasks originally assigned to user Medaffairs Task</description>
        <label>MedAffairs Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Messaging__c</fullName>
        <label>Other Messaging</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Introduction to G360</fullName>
                </value>
                <value>
                    <fullName>1st Line Undergenotyped</fullName>
                </value>
                <value>
                    <fullName>QNS</fullName>
                    <label>1st Line QNS</label>
                </value>
                <value>
                    <fullName>Progressing patient discussion</fullName>
                </value>
                <value>
                    <fullName>QNS at Progression</fullName>
                </value>
                <value>
                    <fullName>Competitive (vs Hotspot)</fullName>
                </value>
                <value>
                    <fullName>Competitive vs NGS or CGP</fullName>
                </value>
                <value>
                    <fullName>Tissue Paradigm (IO/Targeted/Chemo</fullName>
                </value>
                <value>
                    <fullName>Billing concerns</fullName>
                </value>
                <value>
                    <fullName>Med Affairs</fullName>
                </value>
                <value>
                    <fullName>Patient Results Review</fullName>
                </value>
                <value>
                    <fullName>Competitive (vs Next Gen)</fullName>
                    <isActive>false</isActive>
                    <label>Competitive (vs Next Gen)</label>
                </value>
                <value>
                    <fullName>First Line Metastatic Discussion</fullName>
                    <isActive>false</isActive>
                    <label>First Line Metastatic Discussion</label>
                </value>
                <value>
                    <fullName>Immunotherapy, time to treat use Guardant first</fullName>
                    <isActive>false</isActive>
                    <label>Immunotherapy-time to treat use G360 1st</label>
                </value>
                <value>
                    <fullName>Medical Science Discussion</fullName>
                    <isActive>false</isActive>
                    <label>Medical Science Discussion</label>
                </value>
                <value>
                    <fullName>Patient identification</fullName>
                    <isActive>false</isActive>
                    <label>Patient identification</label>
                </value>
                <value>
                    <fullName>Results discussion</fullName>
                    <isActive>false</isActive>
                    <label>Results discussion</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mutation_Flag__c</fullName>
        <label>Mutation Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EGFR Exon 19del/L858R</fullName>
                </value>
                <value>
                    <fullName>EGFR T790M</fullName>
                </value>
                <value>
                    <fullName>EGFR C797X</fullName>
                </value>
                <value>
                    <fullName>EGFR primary resistance mutations (i.e. exon 20 insertions)</fullName>
                </value>
                <value>
                    <fullName>EGFR other driver</fullName>
                </value>
                <value>
                    <fullName>ALK fusion</fullName>
                </value>
                <value>
                    <fullName>ROS1 fusion</fullName>
                </value>
                <value>
                    <fullName>BRAF V600E</fullName>
                </value>
                <value>
                    <fullName>ALK SNV</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewReferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate an Informational PDF?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_related_to_specific_A__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the task is for Med Affairs and it is not related to a specific A number, check this box and enter the contact/account into the &apos;Record for Med Affairs&apos; field</inlineHelpText>
        <label>Not related to specific A#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_about_MD__c</fullName>
        <inlineHelpText>(max 255 characters), text will be displayed on the contact record</inlineHelpText>
        <label>Notes About MD (GH Use Only)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Origin_of_COntact__c</fullName>
        <label>Origin of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First test questions (not reply to auto-email)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Provider reached out at the request of sales</fullName>
                </value>
                <value>
                    <fullName>Provider reached out independently</fullName>
                </value>
                <value>
                    <fullName>Provider replied to auto email from 1st time test/offer for case review</fullName>
                </value>
                <value>
                    <fullName>Provider was contacted per medical affairs</fullName>
                </value>
                <value>
                    <fullName>Provider was contacted per request from sales</fullName>
                </value>
                <value>
                    <fullName>Report Email Notification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>